# invenio-imoox

./: .editorconfig  .gitignore  .ruff.toml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_imoox/: __init__.py  api.py  cli.py  config.py  converter.py  ext.py  jobs.py  proxies.py  records.py  services.py  tasks.py  utils.py  version.py
tests/: conftest.py  test_invenio_imoox.py
