# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2023 Graz University of Technology.
#
# invenio-imoox is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-imoox
version = attr: invenio_imoox.__version__
description = "Provides API for iMooX."
long_description = file: README.rst, CHANGES.rst
license = MIT
author = Graz University of Technology.
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/tu-graz-library/invenio-imoox
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    click>=7.0.0
    invenio-records-lom>=0.1.0
    requests>=2.0.0

[options.extras_require]
tests =
    invenio-cache>=1.1.0
    invenio-search[opensearch2]>=2.1.0
    pytest-invenio>=1.4.3
    pytest-flake8>=1.0.0
    pytest-black-ng>=0.4.0
    pytest-pylint>=0.18.0
    pytest-bandit>=0.6.1
    ruff>=0.0.263
    Sphinx>=4.4.0

[options.entry_points]
console_scripts =
    imoox = invenio_imoox.cli:imoox
flask.commands =
    imoox = invenio_imoox.cli:imoox
invenio_base.apps =
    invenio_imoox = invenio_imoox:InvenioIMooX
invenio_base.api_apps =
    invenio_imoox = invenio_imoox:InvenioIMooX

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[tool:isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_imoox --cov-report=term-missing
testpaths = tests invenio_imoox
live_server_scope = module
